Fix T56803: Indirect lightning bake crashes Blender