source/blender/draw/intern/draw_manager.c
@@ -423,6 +423,13 @@ void DRW_engine_viewport_data_size_get(
 	}
 }
 
+/* WARNING: only use for custom pipeline. 99% of the time, you don't want to use this. */
+void DRW_render_viewport_size_set(int size[2])
+{
+	DST.size[0] = size[0];
+	DST.size[1] = size[1];
+}
+
 const float *DRW_viewport_size_get(void)
 {
 	return DST.size;
